# imageproc_gpu

./: .gitignore  Cargo.toml  Vagrantfile  build.rs
lib/: Cargo.toml  build.rs
lib/src/: contrast.rs  geometric_trans.rs  lib.rs
programs/: contrast.cl  geometric_trans.cl
programs/contrast/: threshold.comp
shaders/: Cargo.toml
shaders/contrast/: Cargo.toml
shaders/contrast/src/: lib.rs
shaders/geometric_trans/: Cargo.toml
shaders/geometric_trans/src/: lib.rs
shaders/src/: contrast.rs  lib.rs
src/: contrast.rs  lib.rs
