[package]
authors = ["Jerónimo Sánchez <jeronimosg@hotmail.es>"]
edition = "2018"
license = "Apache-2.0"
name    = "imageproc_gpu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23.14", default-features = false }
log   = "0.4.14"
ocl   = { git = "https://github.com/michaelmattig/ocl.git", branch = "rustc_version" } # Change back to mainstream when PR #201 is solved.

[dev-dependencies]
image     = "0.23.14"
imageproc = "0.22.0"

[features]
default = ["contrast", "geometric_trans"]

contrast        = []
geometric_trans = []
