[package]
authors = ["Jerónimo Sánchez <jeronimosg@hotmail.es>"]
edition = "2018"
license = "Apache-2.0"
name    = "imageproc_gpu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
image   = { version = "0.23.14", default-features = false }
log     = "0.4.14"
num     = "0.4.0"
wgpu    = "0.7.0"

[build-dependencies]
spirv-builder = { path = "../rust-gpu/spirv-builder" }


[dev-dependencies]
image     = "0.23.14"
imageproc = "0.22.0"

[features]
default = ["contrast", "geometric_trans", "use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

contrast        = []
geometric_trans = []
